test_regress/t/t_fork.out
%Error-NOTIMING: t/t_fork.v:10:14: Fork statements require --timing
                                 : ... note: In instance 't'
   10 |       fork : fblk
      |              ^~~~
                 ... For error description see https://verilator.org/warn/NOTIMING?v=latest
%Error: Exiting due to
